added an image to the top bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
+        <img src="https://placehold.co/110x60">
         <h1>Lorem ipsum dolor sit amet</h1>
+
     </header>
 
     <section>
