added nav to the top bar

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>lorem</title>
      <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="https://placehold.co/110x60">
         <h1>Lorem ipsum dolor sit amet</h1>
-
+        <p><a href="#">lorem page</a> - <a href="#">non existent page</a></p>
     </header>
 
     <section>
