added an alt to the images

--- a/lorem.html
+++ b/lorem.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="https://placehold.co/110x60"></a>
+        <a href="index.html"><img src="https://placehold.co/110x60" alt="placeholder image"></a>
         <h1>Lorem ipsum dolor sit amet</h1>
         <p><a href="lorem.html">Lorem Page</a> - <a href="#">Non Existent Page</a></p>
     </header>
