added a new page and changed the styling for top links

--- a/lorem.html
+++ b/lorem.html
@@ -10,7 +10,7 @@
     <header>
         <a href="index.html"><img src="https://placehold.co/110x60" alt="placeholder image"></a>
         <h1>Lorem ipsum dolor sit amet</h1>
-        <p><a href="lorem.html">Lorem Page</a> - <a href="#">Non Existent Page</a></p>
+        <p><a href="lorem.html">Lorem Page</a> - <a href="#">Non Existent Page</a> - <a href="food.html">Food Page</a></p>
     </header>
 
     <section>
