fixed the food page title

--- a/food.html
+++ b/food.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <a href="index.html"><img src="https://placehold.co/110x60" alt="placeholder image"></a>
-        <h1>Homepage</h1>
+        <h1>Food Page</h1>
         <p><a href="lorem.html">Lorem Page</a> - <a href="#">Non Existent Page</a> - <a href="food.html">Food Page</a></p>
     </header>
-    <h1>Our foods</h1>
+    <h1>our foods</h1>
 
     <p>food food food food Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus architecto dolor corporis maxime at unde commodi perspiciatis, illum, voluptatibus deleniti dolorum. Delectus adipisci nostrum iste! Quae a molestias nisi obcaecati autem laboriosam cumque quaerat incidunt dolore possimus id blanditiis illo velit corrupti, fuga sit! Veniam tenetur repellat odit, ut inventore hic, tempore deserunt excepturi saepe aliquam, corporis alias soluta obcaecati! Quae doloribus, repellat voluptates exercitationem aut, numquam deleniti nihil doloremque expedita, tenetur repudiandae nobis minima natus quasi quos neque incidunt cumque ex labore corporis nam! Consequatur magnam porro repellendus quisquam culpa quidem veritatis! Exercitationem nisi totam ab! Ea, suscipit iste?</p>
 
